--- a/orderSummaryCard/styles.css
+++ b/orderSummaryCard/styles.css
@@ -36,7 +36,10 @@ main {
 /*------------------      Payment Styles       ---------------------*/
 .pay {
   background-color: blue;
-  height: 2rem;
+  border-radius: 0.7rem;
+  height: 2.5rem;
+  border: 0.2rem solid gold;
+  margin: 2rem 3rem;
 }
 
 .goToPayment {
@@ -45,6 +48,7 @@ main {
   font-weight: bold;
   letter-spacing: -0.03rem;
   text-decoration: none;
+  border: 0.2rem solid gold;
 }
 
 .cancelOrder {
